syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu.rodrigo";
option java_outer_classname = "PixKeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.edu.rodrigo;

service PixKeyManagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoChave {
  UNKNOW_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;

}

enum TipoConta {
  UNKNOW_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

/**
* Registra Chave Pix
 */

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoChave tipoDeChave = 2;
  string chave = 3;
  TipoConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}